[tool.poetry]
name = "woofapi"
version = "0.1.0"
description = "Multimedia metadata toolset"
authors = ["StoneMoe <lakechan96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
